stars bugfix (not more visible outside card)

--- a/styles/index.css
+++ b/styles/index.css
@@ -59,7 +59,7 @@ button {
 .stars {
   color: #999;
   font-size: 0.9rem;
-  margin-bottom: -185px;
+  margin-bottom: -145px;
   margin-right: 40px;
 }
 
